<resources>
    <string name="app_name">Color Determiner</string>
    <string name="toBackCamera">Switch to back</string>
    <string name="toFrontCamera">Switch to front</string>
    <string name="lightOn">Turn light on</string>
    <string name="lightOff">Turn light off</string>
    <string name="picked">Picked color</string>
    <string name="averaged">Processed</string>
    <string name="nearest">Nearest</string>
    <string name="nearestName">Name is:  </string>
    <string name="method">Method</string>
    <string name="methodAveraged">Averaged</string>
    <string name="methodDominant">Dominant</string>
    <string name="tolerance">Tolerance</string>

    <string name="none">-</string>
    <string name="todo">TODO</string>
    <string name="no_color">no color</string>
    <string name="camera_not_accessible">Camera not accessible.</string>
    <string name="camera_not_found">Camera not found.</string>
</resources>

