<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/surfaceParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <SurfaceView
            android:layout_alignParentTop="true"
            android:id="@+id/surfaceView"
            android:layout_width="300dp"
            android:layout_height="300dp" />

        <net.miamy.android.colordeterminer.LayoutView
            android:id="@+id/TransparentView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/controlsParent"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/surfaceParent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/changeCamera"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="changeCameraClick"
                android:text="@string/toFrontCamera" />

            <Button
                android:id="@+id/turnLight"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default_small"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="turnLightClick"
                android:text="@string/lightOn" />

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/picked" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/averaged" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/nearest" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/nearestName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/previewImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:maxWidth="40dp"
                    android:minWidth="40dp"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/averagedColor"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:maxWidth="40dp"
                    android:minWidth="40dp" />

                <TextView
                    android:id="@+id/foundColor"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:maxWidth="40dp"
                    android:minWidth="40dp" />

                <TextView
                    android:id="@+id/foundColorName"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    android:maxWidth="40dp"
                    android:minWidth="40dp"
                    android:text="@string/none"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/method" />

            <RadioButton
                android:id="@+id/rbAveraged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="averagedMethodClick"
                android:text="@string/methodAveraged" />

            <RadioButton
                android:id="@+id/rbDominant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="dominantMethodClick"
                android:text="@string/methodDominant" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:text="@string/tolerance" />

            <SeekBar
                android:id="@+id/sbTolerance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="30"
                android:min="0"
                android:progress="10"
                tools:targetApi="o" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>